objects/Occupancy_Opp_Stage__mdt.object
<CustomObject>
    <label>Occupancy Opp Stage</label>
    <pluralLabel>Occupancy Opp Stages</pluralLabel>
    <fields>
        <fullName>Scenario__c</fullName>
        <label>Scenario</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move In</fullName>
                    <default>true</default>
                    <label>Move In</label>
                </value>
                <value>
                    <fullName>Move Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <label>Opp Stage</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Level_of_Care__c</fullName>
        <label>Opp Level of Care</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Record_Type_Name__c</fullName>
        <label>Opp Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>